--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist -r https://github.com/rochdiboudjehem/rochdiboudjehem.github.io.git"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
-  }
+  },
+  "homepage": "https://rochdiboudjehem.github.io/"
 }
