--- a/package.json
+++ b/package.json
@@ -11,9 +11,22 @@
     "deploy": "gh-pages -d dist -r https://github.com/rochdiboudjehem/rochdiboudjehem.github.io.git"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   },
-  "homepage": "https://rochdiboudjehem.github.io/"
+  "homepage": "https://rochdiboudjehem.github.io/",
+  "dependencies": {
+    "@chakra-ui/layout": "^2.3.1",
+    "@chakra-ui/react": "^3.19.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
+    "framer-motion": "^12.16.0",
+    "react-icons": "^5.5.0"
+  }
 }
