--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "academicons": "^1.9.2",
     "framer-motion": "^12.16.0",
     "react-icons": "^5.5.0"
   }
