feat: Add ScrollToTop button and ConferenceItem component; refactor CVSection and App components
- Implemented ScrollToTop button for improved navigation.
- Created ConferenceItem component to display conference details.
- Refactored App component to utilize ConferenceItem for rendering conferences.
- Updated CVSection to include new ConferenceItem component.
- Removed ContactSidebar component as it was deemed unnecessary.
- Enhanced cvData with additional conference participation details.
- Added module dependency in package.json.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/material": "^7.1.1",
     "academicons": "^1.9.2",
     "framer-motion": "^12.16.0",
+    "module": "^1.2.5",
     "react-icons": "^5.5.0"
   }
 }
