--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "academicons": "^1.9.2",
+    "devicons": "^1.8.0",
+    "file-icons-js": "^1.1.0",
     "framer-motion": "^12.16.0",
-    "module": "^1.2.5",
-    "react-icons": "^5.5.0"
+    "module": "^1.1.0",
+    "react-icons": "^5.5.0",
+    "simple-icons": "^15.1.0",
+    "super-tiny-icons": "^0.6.0"
   }
 }
