--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "deploy": "gh-pages -d dist -r https://github.com/rochdiboudjehem/rochdiboudjehem.github.io.git"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   },
@@ -24,9 +21,11 @@
     "@chakra-ui/react": "^3.19.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "academicons": "^1.9.2",
+    "bootstrap": "^5.3.6",
     "devicons": "^1.8.0",
     "file-icons-js": "^1.1.0",
     "framer-motion": "^12.16.0",
